Type variable programs

--- a/A/A1/Типы данных.ipynb
+++ b/A/A1/Типы данных.ipynb
@@ -149,6 +149,218 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "type(input())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Иван Водовозов\n",
+      "Сегодня Вас зовут Иван Водовозов\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Напишите программу, которая просит пользователя ввести своё имя в переменную name, \n",
+    "#а затем выводит на экран фразу: \"Сегодня Вас зовут ...\", где вместо многоточия отображается имя пользователя.\n",
+    "\n",
+    "name = str(input())\n",
+    "print('Сегодня Вас зовут ' +name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Репроприация\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Напишите программу, \n",
+    "#которая выводит на экран длину слова, значение которого хранится в переменной word. Вместо word = input() \n",
+    "\n",
+    "word = str(input())\n",
+    "print(len(word))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Напишите программу, которая принимает на вход два целых числа (a и b) \n",
+    "# и выводит на экран остаток от деления первого числа а на второе число b.\n",
+    "\n",
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "print(a%b)\n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.4\n",
+      "5\n",
+      "8\n",
+      "4.5788569702133275\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Напишите программу, с помощью которой пользователь может ввести три положительных \n",
+    "#числа и увидеть на экране их среднее геометрическое. Названия переменных a, b, c.\n",
+    "a = float(input())\n",
+    "b = float(input())\n",
+    "c = float(input())\n",
+    "\n",
+    "print(pow(a*b*c, (1/3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.5\n",
+      "151.8085\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Напишите программу, с помощью которой пользователь\n",
+    "#может рассчитать значение функции, предварительно указав значение аргумента x.\n",
+    "\n",
+    "x = float(input()) \n",
+    "print(6.996+45*(x/2)**2+2*x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Напишите программу, с помощью которой пользователь сможет рассчитать свой индекс массы тела \n",
+    "#(ИМТ - масса тела в килограммах делённая на квадрат роста в метрах).\n",
+    "#Выведите ИМТ на экран. Названия переменных weight и height.\n",
+    "\n",
+    "weight = float(input('Введите ваш рост: \\n')) \n",
+    "height = float(input('Введите ваш вес: \\n')) \n",
+    "print('Индекс массы тела', weight /height**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Напишите программу, которая принимает на вход два числа a и b и выводит корень третьей степени их среднего арифметического на экран.\n",
+    "\n",
+    "a = float(input())\n",
+    "b = float(input())\n",
+    "print(pow(((a+b)/2),(1/3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Напишите программу, которая принимает на вход целое число, умножает его на 3 и выводит на экран сообщение: \"Вы ввели число, которое при умножении на 3 даёт ...\". \n",
+    "#В сообщении вместо многоточия должен быть отображён результат умножения в виде целого числа.\n",
+    "\n",
+    "a = int(input())\n",
+    "print('Вы ввели число, которое при умножении на 3 даёт '+str(a*3))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Напишите программу, которая на вход принимает 3 строки и выводит \n",
+    "#на экран среднее геометрическое длин этих строк Названия переменных string_1, string_2, string_3. \n",
+    "\n",
+    "string_1 = str(input())  \n",
+    "string_2 = str(input()) \n",
+    "string_3 = str(input())\n",
+    "print(pow((len(string_1)*len(string_2)*len(string_3)),(1/3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Напишите программу, которая принимает на вход строку и целое число и выводит \n",
+    "#на экран эту строку, её длину и её длину в степени введённого целого числа.\n",
+    "#При введении, например, строки \"привет\" и числа 2 на экране должно быть выведено \"привет 6 36\".\n",
+    "#Названия переменных string и power.\n",
+    "\n",
+    "string = str(input())  \n",
+    "power = int(input())\n",
+    "print(string+' '+str(len(string))+' '+str(len(string)**power))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
