--- a/A/A1/Условные операторы.ipynb
+++ b/A/A1/Условные операторы.ipynb
@@ -90,6 +90,173 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "пятница\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Напишите программу, которая принимает на вход от пользователя число от 1 до 7 (переменная number) \n",
+    "#и выводит на экран соответствующий день недели (на русском языке с маленькой буквы). \n",
+    "#Например, при вводе единицы появляется надпись \"понедельник\". Для проверки используйте number = 5\n",
+    "\n",
+    "number = 5\n",
+    "\n",
+    "if number == 1:\n",
+    "    print('понедельник')\n",
+    "elif number == 2:\n",
+    "    print('вторник')\n",
+    "elif number == 3:\n",
+    "    print('среда')\n",
+    "elif number == 4:\n",
+    "    print('четверг')\n",
+    "elif number == 5:\n",
+    "    print('пятница')\n",
+    "elif number == 6:\n",
+    "    print('суббота')\n",
+    "elif number == 7:\n",
+    "    print('воскресенье')\n",
+    "else:\n",
+    "    print('Некорректное значение')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Норма\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Индекс массы тела (ИМТ) является простым и одновременно важным индикатором состояния здоровья человека. \n",
+    "#Он рассчитывается как отношение веса человека (в килограммах) к квадрату его роста (в метрах).\n",
+    "#Если ИМТ находится в пределах от 18,5 до 24,99 включительно, соответствие между массой тела и \n",
+    "#ростом человека считают нормальным. Значения ниже этого диапазона сигнализируют о недостаточной массе тела, выше — об избыточной массе тела. Помогите врачам автоматизировать принятие решений на основе ИМТ. Напишите программу, в которой человек может указать свой вес (weight) и рост (height), а затем прочитать заключение: \n",
+    "#    \"Недостаточная масса тела\", \"Норма\", \"Избыточная масса тела\". Для проверки используйте weight = 80 и height=1.8\n",
+    "\n",
+    "weight = 80 \n",
+    "height = 1.8\n",
+    "IMT=weight/height**2\n",
+    "if IMT < 18.5  :\n",
+    "   print('Недостаточная масса тела')\n",
+    "elif  IMT <= 24.9 :\n",
+    "   print('Норма')\n",
+    "else :\n",
+    "  print('Избыточная масса тела')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "хорошо\n"
+     ]
+    }
+   ],
+   "source": [
+    "#При выставлении оценок в ведомость преподавателю необходимо \n",
+    "#не только указать полученную студентом оценку, но и расшифровать её. \n",
+    "#В университете принята следующая шкала оценок: меньше 4 — 'неудовлетворительно',\n",
+    "#    4-5 —'удовлетворительно', 6-7 — 'хорошо', 8 и выше — 'отлично'.\n",
+    "#    Напишите программу, которая принимает на вход полученную оценку (mark) и расшифровывает \n",
+    "#    её таким образом: вводимая оценка — число от 1 до 10. Для проверки используйте mark = 7\n",
+    "\n",
+    "\n",
+    "mark = 7\n",
+    "if mark < 4  :\n",
+    "   print('неудовлетворительно')\n",
+    "elif ( mark >= 4 and mark <=5) :\n",
+    "   print('удовлетворительно')\n",
+    "elif  (mark >= 6 and mark <= 7) :\n",
+    "   print('хорошо')\n",
+    "elif  mark <= 8 :\n",
+    "   print('отлично')\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Придётся потерпеть!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Иногда человек хочет сходить в ресторан. Он может себе это позволить, \n",
+    "#если у него до зарплаты осталось (balance) больше 5 тысяч рублей.\n",
+    "#Если же у него меньше 5 тысяч, но больше 2.5 тысяч рублей,\n",
+    "#он может сходить только в фастфуд. Если меньше, то придётся терпеть до зарплаты. \n",
+    "#Напишите программу, которая принимает на вход количество оставшихся денег в рублях и говорит,\n",
+    "#можно ли человеку пойти в ресторан (варианты ответа программы - \n",
+    "#\"Сегодня твой выбор - ресторан!\", \"Эх, только фастфуд.\" и \"Придётся потерпеть!\"). \n",
+    "#Для проверки используйте balance = 455\n",
+    "\n",
+    "\n",
+    "balance = 455\n",
+    "if balance >= 5000  :\n",
+    "   print('Сегодня твой выбор - ресторан!')\n",
+    "elif ( balance < 5000  and balance >=2500) :\n",
+    "   print('Эх, только фастфуд')\n",
+    "else:  \n",
+    "   print('Придётся потерпеть!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Число делится на 2 без остатка.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Напишите программу, которая принимает на вход целое число (number)\n",
+    "#и проверяет его на делимость на 2, 3 и 5. При делимости на 2 без \n",
+    "#остатка она выведет \"Число делится на 2 без остатка.\", иначе при делимости на 3 \n",
+    "#выведет \"Число делится на 3 без остатка.\", иначе при делимости на 5 выведет \"Число делится на 5 без остатка.\", \n",
+    "#а иначе выведет\n",
+    "#\"Число не делится ни на 2, ни на 3, ни на 5 без остатка!\". Для проверки используйте number = 452\n",
+    "\n",
+    "number = 452\n",
+    "if number % 2 == 0 : \n",
+    "    print('Число делится на 2 без остатка.')\n",
+    "elif number % 3 == 0 : \n",
+    "    print('Число делится на 3 без остатка')\n",
+    "elif number % 5 == 0 : \n",
+    "    print('Число делится на 5 без остатка.')\n",
+    "else : print('Error')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
