--- a/A/A1/Простые и составные условия.ipynb
+++ b/A/A1/Простые и составные условия.ipynb
@@ -115,19 +115,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Преподаватель занят.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Преподаватель ведёт занятия с 10:30 до 12:00, с 13:40 до 15:00, с 18:00 до 19:30.\n",
+    "#                        В университет он приходит в 10 утра, а уходит - в 20 часов.\n",
+    "#                        Время в университете, свободное от занятий, он посвящает консультированию студентов. \n",
+    "#                        Напишите программу, которая помогла бы студентам подстроиться под свободное \n",
+    "#                        время преподавателя: пусть они вводят желаемое время (сначала одно число — часы (hour), \n",
+    "#                        затем второе — минуты (minute)), а программа показывает, свободен преподаватель в это \n",
+    "#                        время или нет (выводит на экран \"Преподаватель свободен.\" или \"Преподаватель занят.\", \n",
+    "#соответственно). Для проверки используйте hour = 18 и minute = 47\n",
+    "\n",
+    "\n",
+    "hour = 18 \n",
+    "minute = 47\n",
+    "\n",
+    "if  ((hour<=10 and minute<=30) and (hour>=12 and minute<=0) or (hour<=13 and minute<=40) and (hour>=15 and minute<=0)  or (hour<=18 and minute<=0) and (hour>=19 and minute<=30)):\n",
+    "    print('Преподаватель занят.')\n",
+    "else:     print('Преподаватель занят.')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Преподаватель ведёт занятия с 10:30 до 12:00, с 13:40 до 15:00, с 18:00 до 19:30.\n",
-    "                        В университет он приходит в 10 утра, а уходит - в 20 часов.\n",
-    "                        Время в университете, свободное от занятий, он посвящает консультированию студентов. \n",
-    "                        Напишите программу, которая помогла бы студентам подстроиться под свободное \n",
-    "                        время преподавателя: пусть они вводят желаемое время (сначала одно число — часы (hour), \n",
-    "                        затем второе — минуты (minute)), а программа показывает, свободен преподаватель в это \n",
-    "                        время или нет (выводит на экран \"Преподаватель свободен.\" или \"Преподаватель занят.\", \n",
-    "соответственно). Для проверки используйте hour = 18 и minute = 47"
-   ]
+   "source": []
   }
  ],
  "metadata": {
