--- a/B/B6/Средние значения.ipynb
+++ b/B/B6/Средние значения.ipynb
@@ -205,6 +205,8 @@
    ],
    "source": [
     "# Математическое ожидание \n",
+    "\n",
+    "\n",
     "# Дисперсия\n",
     "dispersia = np.var(students['Масса тела, кг'])\n",
     "dispersia"
@@ -230,6 +232,78 @@
     "# Стандартное отклонение \n",
     "std = np.std(students['Средний балл'])\n",
     "std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1, 10, (10, 10))\n",
+    "np.max(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 7  8  9]\n",
+      " [12 13 14]\n",
+      " [17 18 19]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Напишите код, с помощью которого можно извлечь из него центральный фрагмент размером 3 х 3, \n",
+    "#с числами 7, 8, 9, 12, 13, 14, 17, 18, 19.\n",
+    "\n",
+    "my_array = np.array([[1,2,3,4,5],\n",
+    "                     [6,7,8,9,10],\n",
+    "                     [11,12,13,14,15],\n",
+    "                     [16,17,18,19,20],\n",
+    "                     [21,22,23,24,25]])\n",
+    "\n",
+    "print((my_array[:,1:4])[1:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.058124302614133594\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Создайте массив my_sin, состоящий из синусов элементов массива my_array. \n",
+    "#Посчитайте, чему равна сумма элементов полученного массива. Ответ округлите до трёх цифр после запятой.\n",
+    "summ = 0\n",
+    "my_sin = np.sin(my_array)\n",
+    "for i in my_sin: \n",
+    "   summ += sum(i) \n",
+    "print(summ)"
    ]
   },
   {
